@@ -1,3 +1,6 @@
+*2014-06-15	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5c
+*	Fixing last bug fix .. ahue
+*	Some minor changes
 *2014-06-14	Senketsu <senketsu.dev@gmail.com> Pomfit version 0.0.5b
 *	Fixing link issue with recent (temporary?)storage changes on pomf.se
 *	Fix for crashes caused by pasted part of code~
